# challenger-alura

./: .env.example  README.md  app.py  implementation_plan.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: politica_credito.yaml
src/: __init__.py
src/agents/: __init__.py  analista_financiero.py  dictaminador.py  evaluador_riesgo.py  ingestor_agent.py
src/models/: __init__.py  schemas.py
src/state/: __init__.py  graph_state.py
src/tools/: __init__.py  pdf_parser_tool.py  policy_engine_tool.py  ratio_calculator_tool.py
src/utils/: __init__.py  config.py  validators.py
tests/: __init__.py  test_agents_integration.py
