[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evaluacion-crediticia-chile"
version = "1.0.0"
description = "Sistema multiagente de evaluación crediticia para factoring y leasing en Chile"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["factoring", "leasing", "credit-scoring", "chile", "langchain", "langgraph"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]